--- a/src/Landing.css
+++ b/src/Landing.css
@@ -3,9 +3,6 @@
     height: 60vh;
     background-image: url("./images/home1.png");
     background-attachment: fixed;
+    background-repeat: no-repeat;
     position: relative;
 }
-/* .logo-name {
-    background-image: url("./images/sproutename.png");
-    
-} */
