--- a/src/components/menu/menuItems.css
+++ b/src/components/menu/menuItems.css
@@ -28,7 +28,7 @@
     border-radius: 10px;
 }
 .menu_1>div{
-    padding:2px;
+    padding:2px 2px 2px 2px;
     margin-right: 5px;
 }
 img{
@@ -54,5 +54,4 @@ img{
 .more{
     padding:10px;
     text-align: center;
-
 }
