--- a/clients/src/LandingPages/Landing.css
+++ b/clients/src/LandingPages/Landing.css
@@ -1,7 +1,7 @@
 .main {
     width: 100%;
     height: 60vh;
-    background-image: url("./images/home1.png");
+    background-image: url("../components/images/home1.png");
     background-attachment: fixed;
     background-repeat: no-repeat;
     position: relative;
