--- a/clients/src/components/menu/menuItems.css
+++ b/clients/src/components/menu/menuItems.css
@@ -9,11 +9,10 @@
     display: flex;
     width:70%;
     flex-direction: column;
-    margin-top:0.5em;;
+    margin-top:0.5em;
     overflow-y: scroll;
     scroll-behavior: smooth;
     height:70vh;
-    
 }
 .menu::-webkit-scrollbar{
     display: none;
