--- a/clients/src/Pages/styles.css
+++ b/clients/src/Pages/styles.css
@@ -5,206 +5,104 @@
     font-family: 'Poppins', sans-serif;
     /* background: #FEFEFE; */
 }
-span{
-    color:#FA4B0C;
-}
-.title{
-    color:white;
-    margin-left: 2em;
-}
-.upper{
-    color:white;
-    margin-top:2em;
-    margin-left: 3em;
-    list-style-type: none;
-    line-height: 2.7em;
-    
+/* Table Styles */
 
-}
-.upper li{
-    width: 10em;
-    font-size:1em;
+.table-wrapper{
+    margin: 0 1em;
+    box-shadow: 0px 15px 50px rgba( 0, 0, 0, 0.2 );
 }
 
-ul li{
-    /* background-color: #C4C4C4; */
-    margin:0.5em;
-    
-}
-.lower{
-    color:white;
-    font-size: 1em;
-    margin-top:20em;
-    margin-left: 2em;
-    list-style-type: none;
-    line-height: 2.7em;
-
-}
-.lower li{
-    width: 10em;
-}
-/* .header{
-    float:right;
-    margin-left: 20vw;
-} */
-.sidebar{
-    display:inline-block;
-}
-
-.holder{
-    display: flex;
-}
-.search input{
-    width:25em;
-    padding: 0.7em;
-    background:#f1f4ff;
-    border-radius:30em;
-    border:none;
-    margin-left: 30em;
-    margin-top: 0em;
-    box-shadow: 5px 5px 10px #cbcbcb;
-}
-.search input::placeholder{
-    color:#FA4B0C;
-
-    opacity:0.7;
-    font-size: 1em;
-    font-weight: light;
-
-}
-/* .search{
-    position: absolute;
-} */
-
-
-.cap{
-    width:4em;
-    position: absolute;
-    margin-left:8em;
-
-}
-
-
-.main{
-    margin-left:14em;
-    width:50em;
-    color:black;
-    margin-top:1.9em;
-}
-
-.preview {
-    box-shadow:10px 10px 10px rgba(0,0,0,0.1);
-    padding:10px 16px;
-    /* margin: 20px 0; */
-    height: 6em;
-    font-size: 0.7em;
-    margin-top:3em;
-    width: 130vh;  
-}
-
-.preview ul{
-    list-style-type:none;
-    display:flex;
-
-    
-}
-.preview ul li{
-    margin-top:2em;
-    margin-right: 6em;
-}
-
-.profile{
-    height:5em;
-    width:5em;
-    background-image: linear-gradient(-90deg,#0093E9, #1EFBE2);
-    border-radius:50%;
-    /* margin-top:0.5em; */
-}
-.button button{
-    width: 8em;
-    background: #FA4B0C;
-    height: 3em;
+.fl-table {
+    border-radius: 5px;
+    font-size: 12px;
+    font-weight: normal;
     border: none;
-    color:white;
-    font-weight:bold;
-    border-radius: 5em;
-    margin-top:4em;
+    border-collapse: collapse;
+    width: 100%;
+    max-width: 100%;
+    white-space: nowrap;
+}
+.fl-table td, .fl-table th {
+    text-align: center;
+    padding: 1.5em 0;
+}
+.fl-table td {
+    border-right: 1px solid #f8f8f8;
+    font-size: 12px;
+}
 
-}
-.describe {
-    display:flex;
-    margin-bottom:1em;
-
-    
-}
-.describe h4{
-    margin-left:0em;
-
-}
-.underline{
-    background:#FA4B0C;
-    height:0.3em;
-    width: 4.8em;
-    margin-top:1.25em;
-    border-radius:4em;
-}
-.lists ul li{
-    list-style-type:none;
-    
-}
-.lists ul{
-    display:flex;
-    font-weight: bold;
-}
-.lists ul li:nth-child(1){
-    margin-left: 1em;
-}
-.lists ul li:nth-child(2){
-    margin-left: 2em;
-}
-.lists ul li:nth-child(3){
-    margin-left: 6em;
-}
-.lists ul li:nth-child(4){
-    margin-left: 7em;
-}
-.lists ul li:nth-child(5){
-    margin-left:4em;
-}
-.lists ul li:nth-child(6){
-    margin-left:3em;
-}
-.lists ul li:nth-child(7){
-    margin-left:4em;
+.fl-table thead th {
+    color: black;
 }
 
 
-.dash{
-    padding-top:0em;
+.fl-table thead th:nth-child(odd) {
+    color: black;
 }
-@media only screen and (max-width: 600px) {
-    .sidebar{
-        width:97em;
-        height: 100em;
+
+/* Responsive */
+
+@media (max-width: 767px) {
+    .fl-table {
+        display: block;
+        width: 100%;
     }
-    .cap{
-        margin-top:17em;
-        margin-left: 0em;
-        font-size: 6em;
+    .table-wrapper:before{
+        content: "Scroll horizontally >";
+        display: block;
+        text-align: right;
+        font-size: 11px;
+        color: white;
+        padding: 0 0 10px;
     }
-    .upper{
-        font-size:20px;
+    .fl-table thead, .fl-table tbody, .fl-table thead th {
+        display: block;
     }
-    .main{
-        margin-top:25em;
-        margin-left: 0em;
-        font-size: 5em;
+    .fl-table thead th:last-child{
+        border-bottom: none;
     }
-    .search input{
-        margin-top:90em;
+    .fl-table thead {
+        float: left;
     }
-
-  }
-  
-
-
+    .fl-table tbody {
+        width: auto;
+        position: relative;
+        overflow-x: auto;
+    }
+    .fl-table td, .fl-table th {
+        padding: 20px .625em .625em .625em;
+        height: 60px;
+        vertical-align: middle;
+        box-sizing: border-box;
+        overflow-x: hidden;
+        overflow-y: auto;
+        width: 120px;
+        font-size: 13px;
+        text-overflow: ellipsis;
+    }
+    .fl-table thead th {
+        text-align: left;
+        border-bottom: 1px solid #f7f7f9;
+    }
+    .fl-table tbody tr {
+        display: table-cell;
+        
+    }
+    .fl-table tbody tr:nth-child(odd) {
+        background: none;
+    }
+    .fl-table tr:nth-child(even) {
+        background: transparent;
+    }
+    .fl-table tr td:nth-child(odd) {
+        background: #F8F8F8;
+        border-right: 1px solid #E6E4E4;
+    }
+    .fl-table tr td:nth-child(even) {
+        border-right: 1px solid #E6E4E4;
+    }
+    .fl-table tbody td {
+        display: block;
+        text-align: center;
+    }
+}
